site initial status fixed